[project]
name = "accuweather_client"
version = "0.0.2"
description = "The goal of this project is to create a user friendly api client for AccuWeather api."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas==1.5.3",
    "pydantic==2.8.2",
    "python-dotenv==1.0.1",
    "Requests==2.32.3",
]
authors = [{ name = "Thomas", email = "thomas.development1942@gmail.com" }]
keywords = ["AccuWeather", "API", "weather", "client", "python"]
urls = { repository = "https://github.com/Thomas1942/AccuWeather" }
